@@ -1,3 +1,11 @@
+2009-05-27  Miklos Szeredi <miklos@szeredi.hu>
+
+	* kernel: Don't set 'aborted' flag on a request if it's
+	interrupted (commit a131de0a).  Reported and tested by John Haxby
+
+	* Don't call forget_node() if the lookup was negative and write()
+	for the reply returned ENOENT.  Reported by John Haxby
+
 2008-07-25  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.7.4
